--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">sports</string>
+    <string name="otp_verification">OTP Verification</string>
+    <string name="we_will_send_you_one_time_password_on_this_mobile_number">We will send you one time password on this mobile number</string>
+
+    <string name="_91">+91-</string>
+    <string name="_1234567890">1234567890</string>
+    <string name="get_otp">GET OTP</string>
+    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
+    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
+    <string name="resend_otp">RESEND OTP</string>
+    <string name="verify">Verify</string>
+    <string name="we_will_send_you_an_one_time_otp_ponm_this_mobile_number">We will send you an one time otp ponm this mobile number</string>
+    <string name="enter_mobile_number">Enter Mobile Number</string>
 </resources>
